--- a/info.yml
+++ b/info.yml
@@ -1,6 +1,6 @@
-name : Your Name Here
-keywords : "some | adjectives | about you"
-major: Your Major
-gradyear: 2026
-tagline : a short phrase you want people to see on every page
+name : Mariam Durowoju
+keywords : My favorite food is chicken
+major: Computer Science
+gradyear: 2027
+tagline : Allihamdulilah
 default_mode: dark
